--- a/sw/templates/account/verification_sent.html
+++ b/sw/templates/account/verification_sent.html
@@ -2,11 +2,11 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block head_title %}{% trans "Verify Your Email Address" %}{% endblock %}
 
 {% block body %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
+    <h1>{% trans "Verify Your Email Address" %}</h1>
     
-    <p>{% blocktrans %}We have sent you an e-mail to <b>{{ email }}</b> for verification. Follow the link provided to finalize the signup process. If you do not receive it within a few minutes, contact us at <a href="mailto:{{ CONTACT_EMAIL }}">{{ CONTACT_EMAIL }}</a>.{% endblocktrans %}</p>
+    <p>{% blocktrans %}We have sent you an email to <b>{{ email }}</b> for verification. Follow the link provided to finalize the signup process. If you do not receive it within a few minutes, contact us at <a href="mailto:{{ CONTACT_EMAIL }}">{{ CONTACT_EMAIL }}</a>.{% endblocktrans %}</p>
 
 {% endblock %}
