--- a/sw/templates/sidebars/wikicommon.html
+++ b/sw/templates/sidebars/wikicommon.html
@@ -1,11 +1,12 @@
 {% load group_tags %}
 
 <div class="section">
-    <h1>Wiki</h1>
+    <h1>Wiki Tools</h1>
+
+    <p>Here are more tools for this team's wiki:</p>
 
     <ul>
-        <li><a href="{% groupurl wakawaka_index group %}">Home Page</a></li>
-        <li><a href="{% groupurl wakawaka_revision_list group %}">Recent changes</a></li>
-        <li><a href="{% groupurl wakawaka_page_list group %}">List of all pages</a></li>
+        <li><a href="{% groupurl wakawaka_index group %}">View and edit the team home page</a></li>
+        <li><a href="{% groupurl wakawaka_page_list group %}">Alphabetical list of pages</a></li>
     </ul>
 </div>
