--- a/sw/templates/site_base.html
+++ b/sw/templates/site_base.html
@@ -1,3 +1,5 @@
+{# deprecated #}
+
 {% extends "base_12.html" %}
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
@@ -8,7 +10,4 @@
         {% block body %}
         {% endblock %}
     </div>
-{% endblock %}
-
-{% block sidebar %}
 {% endblock %}
