--- a/sw/templates/teams/team.html
+++ b/sw/templates/teams/team.html
@@ -1,9 +1,16 @@
 {% extends "teams/base.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load group_tags %}
 {% load pagination_tags %}
 
 {% block head_title %}{{ group.name }}{% endblock %}
+
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb group.name %}
+{% endblock %}
+
 
 {% block body %}
     {% if group.is_private and not is_team_member %}
