Volunteer site sections reordering.

--- a/sw/templates/menu/site_sections_volunteer.html
+++ b/sw/templates/menu/site_sections_volunteer.html
@@ -1,7 +1,7 @@
 {% load group_tags %}
-<li><a href="{% url teams_team slug='welcoming' %}">Welcome</a></li>
-<li><a href="{% url teams_index %}">Teams</a></li>
 <li><a href="{% url dashboard_index %}">Dashboard</a></li>
+<li><a href="{% url teams_index %}">Teams</a></li>
+<li><a href="{% url teams_team slug='welcoming' %}">Welcoming Team</a></li>
 <li><a href="/teams/devops/wiki/FeatureRequests/">Feature Requests</a></li>
 <li><a href="{% url profile_detail user.username %}">Your Profile</a></li>
 <li><a href="{% url pages-root %}">Public Website</a></li>
