--- a/sw/templates/menu/site_sections_volunteer.html
+++ b/sw/templates/menu/site_sections_volunteer.html
@@ -3,5 +3,10 @@
 <li><a href="{% url teams_index %}">Teams</a></li>
 <li><a href="{% url teams_team slug='welcoming' %}">Welcoming Team</a></li>
 <li><a href="/teams/devops/wiki/FeatureRequests/">Feature Requests</a></li>
-<li><a href="{% url profile_detail user.username %}">Your Profile</a></li>
-<li><a href="{% url pages-root %}">Public Website</a></li>
+{% if user.is_authenticated %}
+    <li><a href="{% url profile_detail user.username %}">Your Profile</a></li>
+    <li><a href="{% url pages-root %}">Public Website</a></li>
+{% else %}
+    <li><a href="{% url profile_list %}">Profiles</a></li>
+    <li><a href="{% url pages-root %}">Public Website</a></li>
+{% endif %}
