--- a/sw/templates/idios/base.html
+++ b/sw/templates/idios/base.html
@@ -1,10 +1,16 @@
 {% extends "base_hq_12.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load i18n %}
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
 
 {% block body_class %}{{ block.super }} profile{% endblock %}
+
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb 'Profiles' %}
+{% endblock %}
 
 {% block page_content %}
     <div id="content" class="alpha omega grid_12">
