--- a/sw/templates/idios/profile_create.html
+++ b/sw/templates/idios/profile_create.html
@@ -1,11 +1,19 @@
 {% extends "idios/base.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Create Profile" %}{% endblock %}
 
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb 'Create Profile' %}
+{% endblock %}
+
 {% block body %}
-    <h1>{% trans "Create Profile" %}</h1>
+    {% feature breadcrumbs %}{% disabled %}
+        <h1>{% trans "Create Profile" %}</h1>
+    {% endfeature %}
 
     <form class="uniForm" method="POST" action="{% url profile_create %}">
         {% include "idios/profile_form_contents.html" %}
