--- a/sw/templates/menu/site_sections_visitor.html
+++ b/sw/templates/menu/site_sections_visitor.html
@@ -6,5 +6,5 @@
 {% if user.is_authenticated %}
     <li><a href="{% url dashboard_index %}">Volunteer HQ</a></li>
 {% else %}
-    <li><a href="{% url account_login %}">Volunteer</a></li>
+    <li><a href="{% url account_login %}">Volunteer HQ</a></li>
 {% endif %}
