--- a/sw/templates/menu/site_sections_volunteer.html
+++ b/sw/templates/menu/site_sections_volunteer.html
@@ -4,9 +4,9 @@
 <li><a href="{% url teams_team slug='welcoming' %}">Welcoming Team</a></li>
 <li><a href="/teams/devops/wiki/FeatureRequests/">Feature Requests</a></li>
 {% if user.is_authenticated %}
-    <li><a href="{% url profile_detail user.username %}">Your Profile</a></li>
+    <li><a href="{% url profile_list %}">Friends</a></li>
     <li><a href="{% url pages-root %}">Public Website</a></li>
 {% else %}
-    <li><a href="{% url profile_list %}">Profiles</a></li>
-    <li><a href="{% url pages-root %}">Public Website</a></li>
+    <li><a href="{% url profile_list %}">Friends</a></li>
+    <li><a href="{% url pages-root %}">Leave HQ</a></li>
 {% endif %}
