Use absolute path to images from CSS

--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -61,7 +61,7 @@ td {
   margin-top: .5em; }
 
 .header {
-  background-image: url("../images/logos/logo-246x140.gif");
+  background-image: url("/media/images/logos/logo-246x140.gif");
   background-repeat: no-repeat;
   background-size: 246px 140px;
   background-position: 5px;
@@ -70,7 +70,7 @@ td {
   padding: 0; }
 
 .hq .header {
-  background-image: url("../images/logos/logo-123x70.gif");
+  background-image: url("/media/images/logos/logo-123x70.gif");
   background-size: 123px 70px;
   height: 70px; }
 
@@ -411,7 +411,7 @@ ul.checklist {
 ul.checklist li {
   background-repeat: no-repeat;
   background-position: -10px -5px;
-  background-image: url("../images/icons/greencheck.png");
+  background-image: url("/media/images/icons/greencheck.png");
   background-color: transparent;
   background-attachment: scroll;
   padding-left: 50px;
