Breadcrumbs, through and through; and other template refinement tweaks.

--- a/sw/templates/account/password_reset_done.html
+++ b/sw/templates/account/password_reset_done.html
@@ -1,16 +1,25 @@
 {% extends "account/base.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load i18n %}
 {% load account_tags %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb 'Password Reset' %}
+    {% breadcrumb 'Email Sent' %}
+{% endblock %}
+
 {% block body %}
-    <h1>{% trans "Password Reset" %}</h1>
-    
+    {% feature breadcrumbs %}{% disabled %}
+        <h1>{% trans "Password Reset" %}</h1>
+    {% endfeature %}
+
     {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
+        {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
+
     <p>{% blocktrans %}We have sent you an email. If you do not receive it within a few minutes, contact us at <a href="mailto:{{ CONTACT_EMAIL }}">{{ CONTACT_EMAIL }}</a>.{% endblocktrans %}</p>
 {% endblock %}
