--- a/sw/templates/account/password_set.html
+++ b/sw/templates/account/password_set.html
@@ -1,13 +1,21 @@
 {% extends "account/base.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load i18n %}
 {% load uni_form_tags %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb 'Set Password' %}
+{% endblock %}
+
 {% block body %}
-    <h1>{% trans "Set Password" %}</h1>
-    
+    {% feature breadcrumbs %}{% disabled %}
+        <h1>{% trans "Set Password" %}</h1>
+    {% endfeature %}
+
     <form method="POST" action="" class="password_set uniForm">
         {% csrf_token %}
         <fieldset class="inlineLabels">
