--- a/sw/templates/account/password_change.html
+++ b/sw/templates/account/password_change.html
@@ -1,12 +1,21 @@
 {% extends "account/base.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load i18n %}
 {% load uni_form_tags %}
+
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb 'Change Password' %}
+{% endblock %}
+
 {% block body %}
-    <h1>{% trans "Change Password" %}</h1>
-    
+    {% feature breadcrumbs %}{% disabled %}
+        <h1>{% trans "Change Password" %}</h1>
+    {% endfeature %}
+
     <form method="POST" action="" class="password_change uniForm">
         {% csrf_token %}
         <fieldset class="inlineLabels">
