--- a/sw/templates/account/password_reset.html
+++ b/sw/templates/account/password_reset.html
@@ -1,20 +1,28 @@
 {% extends "account/base.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load i18n %}
 {% load uni_form_tags %}
 {% load account_tags %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb 'Password Reset' %}
+{% endblock %}
+
 {% block body %}
 
-    <h1>{% trans "Password Reset" %}</h1>
+    {% feature breadcrumbs %}{% disabled %}
+        <h1>{% trans "Password Reset" %}</h1>
+    {% endfeature %}
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
+
     <p>{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>
-    
+
     <form method="POST" action="" class="password_reset uniForm">
         {% csrf_token %}
         <fieldset class="inlineLabels">
@@ -24,7 +32,7 @@
             </div>
         </fieldset>
     </form>
-    
+
     <p>{% blocktrans %}If you have any trouble resetting your password, contact us at <a href="mailto:{{ CONTACT_EMAIL }}">{{ CONTACT_EMAIL }}</a>.{% endblocktrans %}</p>
 {% endblock %}
 
