--- a/sw/templates/account/password_reset_from_key.html
+++ b/sw/templates/account/password_reset_from_key.html
@@ -1,12 +1,24 @@
 {% extends "account/base.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load i18n %}
 {% load uni_form_tags %}
+
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb 'Change Password' %}
+    {% if token_fail %}
+        {% breadcrumb 'Bad Token' %}
+    {% endif %}
+{% endblock %}
+
 {% block body %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
-    
+    {% feature breadcrumbs %}{% disabled %}
+        <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+    {% endfeature %}
+
     {% if token_fail %}
         {% url account_reset_password as passwd_reset_url %}
         <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
