--- a/sw/templates/socialaccount/account_inactive.html
+++ b/sw/templates/socialaccount/account_inactive.html
@@ -1,11 +1,19 @@
 {% extends "socialaccount/base.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
-{% block body %}
-<h1>{% trans "Account Inactive" %}</h1>
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb 'Account Inactive' %}
+{% endblock %}
 
-<p>{% trans "This account is inactive." %}</p>
+{% block body %}
+    {% feature breadcrumbs %}{% disabled %}
+        <h1>{% trans "Account Inactive" %}</h1>
+    {% endfeature %}
+
+    <p>{% trans "This account is inactive." %}</p>
 {% endblock %}
