--- a/sw/templates/socialaccount/authentication_error.html
+++ b/sw/templates/socialaccount/authentication_error.html
@@ -1,11 +1,19 @@
 {% extends "socialaccount/base.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Social Network Login Failure" %}{% endblock %}
 
-{% block body %}
-<h1>{% trans "Social Network Login Failure" %}</h1>
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb 'Login Failure' %}
+{% endblock %}
 
-<p>{% trans "An error occured while attempting to login via your social network account." %}</p>
+{% block body %}
+    {% feature breadcrumbs %}{% disabled %}
+        <h1>{% trans "Social Network Login Failure" %}</h1>
+    {% endfeature %}
+
+    <p>{% trans "An error occured while attempting to login via your social network account." %}</p>
 {% endblock %}
