--- a/sw/templates/wakawaka/edit.html
+++ b/sw/templates/wakawaka/edit.html
@@ -1,5 +1,6 @@
 {% extends "wakawaka/base_fullwidth.html" %}
 
+{% load breadcrumbs feature_tag %}
 {% load group_tags %}
 {% load i18n %}
 {% load uni_form_tags %}
@@ -21,14 +22,26 @@
     {% endif %}
 {% endblock %}
 
+{% block breadcrumbs %}
+    {{ block.super }}
+    {% breadcrumb page.slug '../' %}
+    {% if page.is_initial %}
+        {% breadcrumb 'Add' %}
+    {% else %}
+        {% breadcrumb 'Edit' %}
+    {% endif %}
+{% endblock %}
+
 {% block content %}
-	<h1>
-	    {% if page.is_initial %}
-	        {% blocktrans with page.slug as slug %}Add {{ slug  }}{% endblocktrans %}
-	    {% else %}
-	        {% blocktrans with page.slug as slug %}Edit {{ slug  }}{% endblocktrans %}
-	    {% endif %}
-	</h1>
+	{% feature breadcrumbs %}{% disabled %}
+	    <h1>
+    	    {% if page.is_initial %}
+    	        {% blocktrans with page.slug as slug %}Add {{ slug  }}{% endblocktrans %}
+    	    {% else %}
+    	        {% blocktrans with page.slug as slug %}Edit {{ slug  }}{% endblocktrans %}
+    	    {% endif %}
+    	</h1>
+	{% endfeature %}
 
 	{% if rev.is_not_current %}
     	<p class="revert-warning">{% trans "You are editing an revision which is not the latest!" %}</p>
@@ -36,14 +49,14 @@
 
 	{% if is_locked and have_lock %}
         <div class="grid_8 alpha">
-        	<p class="lock-notice">{% trans "Edit the page below. If you change your mind click" %} <a href="?cancel_lock=true">{% trans "Cancel" %}</a> {% trans "so others may edit the page." %}</p>
+        	<p class="lock-notice">{% trans "Edit the page below. If you change your mind click" %} <a href="?cancel_lock=true" {% if page.is_initial %}onclick="history.go(-1);return false;"{% endif %}>{% trans "Cancel" %}</a> {% trans "so others may edit the page." %}</p>
 
         	<form class="wakawaka_edit_form uniForm" method="POST" action="">
         	    {% csrf_token %}
         		{{ form|as_uni_form }}
         		<p>
                     <input type="submit" value="{% trans "Save changes" %}" />
-                    {% trans "or" %} <a href="?cancel_lock=true">{% trans "Cancel" %}</a>
+                    {% trans "or" %} <a href="?cancel_lock=true" {% if page.is_initial %}onclick="history.go(-1);return false;"{% endif %}>{% trans "Cancel" %}</a>
         		</p>
         	</form>
 
