--- a/sw/templates/menu/site_sections_volunteer.html
+++ b/sw/templates/menu/site_sections_volunteer.html
@@ -1,5 +1,5 @@
 {% load group_tags %}
-<li><a href="{% url dashboard_index %}">Dashboard</a></li>
+<li><a href="{% url dashboard_index %}">HQ</a></li>
 <li><a href="{% url teams_index %}">Teams</a></li>
 <li><a href="{% url teams_team slug='welcoming' %}">Welcoming Team</a></li>
 <li><a href="/teams/devops/wiki/FeatureRequests/">Feature Requests</a></li>
