--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -17,7 +17,7 @@
     <link href="{{ STATIC_URL }}uni_form/uni-form.css" rel="stylesheet">
 
     {# Base #}
-    <link href="{{ STATIC_URL }}css/base.css?2010120903" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/base.css?2010120904" rel="stylesheet">
 
     {% block css %}{% endblock %}
 
@@ -68,15 +68,24 @@
 </head>
 <body class="container_12 {% block body_class %}{% endblock %}">
 
-<div id="auth-info" class="grid_12 alpha omega">
-    {% if user.is_authenticated %}
-        <span>Signed in as {{ user.username }}.</span>
-        <span><a href="{% url profile_detail username=user.username %}">Your Profile</a></span>
-        <span><a href="{% url account_logout %}">Sign Out</a></span>
-    {% else %}
-        <span><a href="{% url account_signup %}">Sign Up</a></span>
-        <span><a href="{% url account_login %}">Sign In</a></span>
-    {% endif %}
+<div id="auth-bar" class="grid_12 alpha omega">
+    <span class="left">{% spaceless %}
+        {% block auth_bar_left %}
+            {% if user.is_authenticated %}
+                <a href="{% url dashboard_index %}">« Back to HQ</a>
+            {% endif %}
+        {% endblock %}
+    {% endspaceless %}</span>
+    <span class="right">{% spaceless %}
+        {% if user.is_authenticated %}
+            <span>Signed in as {{ user.username }}.</span>
+            <span><a href="{% url profile_detail username=user.username %}">Your Profile</a></span>
+            <span><a href="{% url account_logout %}">Sign Out</a></span>
+        {% else %}
+            <span><a href="{% url account_signup %}">Sign Up</a></span>
+            <span><a href="{% url account_login %}">Sign In</a></span>
+        {% endif %}
+    {% endspaceless %}</span>
 </div>
 
 {% block header %}
