--- a/sw/templates/dashboard/index.html
+++ b/sw/templates/dashboard/index.html
@@ -3,18 +3,16 @@
 {% load breadcrumbs feature_tag %}
 {% load pagination_tags %}
 
-{% block page_title %}Dashboard{% endblock %}
+{% block page_title %}HQ{% endblock %}
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb 'Dashboard' %}
 {% endblock %}
-
 
 {% block team_header %}
     {% feature breadcrumbs %}{% disabled %}
         <div id="team-header" class="grid_12 alpha omega">
-            <h1>Dashboard</h1>
+            <h1>HQ</h1>
         </div>
     {% endfeature %}
 {% endblock %}
