--- a/sw/templates/menu/site_sections_volunteer.html
+++ b/sw/templates/menu/site_sections_volunteer.html
@@ -1,12 +1,7 @@
 {% load group_tags %}
 <li><a href="{% url dashboard_index %}">HQ</a></li>
-<li><a href="{% url teams_index %}">Teams</a></li>
-<li><a href="{% url teams_team slug='welcoming' %}">Welcoming Team</a></li>
-<li><a href="/teams/devops/wiki/FeatureRequests/">Feature Requests</a></li>
-{% if user.is_authenticated %}
-    <li><a href="{% url profile_list %}">Friends</a></li>
-    <li><a href="{% url pages-root %}">Public Website</a></li>
-{% else %}
-    <li><a href="{% url profile_list %}">Friends</a></li>
-    <li><a href="{% url pages-root %}">Leave HQ</a></li>
-{% endif %}
+<li><a href="{% url teams_team slug='welcoming' %}">Get Started</a></li>
+<li><a href="/teams/webcontent/wiki/VolunteerSupport/">Support</a></li>
+<li><a href="/teams/webcontent/wiki/YourLocalSW">Your Local SW</a></li>
+<li><a href="/teams/devops/wiki/FriendsFeature/">Friends</a></li>
+<li><a href="/teams/webcontent/wiki/AdminOnly/">Admin Only</a></li>
